# whisperx_diarize_gui

./: .gitignore  Modelfile  README.MD  app_launcher.py  build_app.sh  diarize.spec  entitlements.plist  pyproject.toml  test_diarize.py
src/diarize_gui/: __init__.py  dashboard.py  gui.py  openai_provider.py  pipeline.py  pyannote_offline_loader.py  recorder.py  test_openai_provider.py  theme.py  utils.py
src/diarize_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
